welcome.lessons.welcome.bat.bool2.CaughtSpeeding.scala.error
caughtSpeeding:17: error: type mismatch;
 found   : Unit
 required: Int
			if (speed>=81)
                        ^caughtSpeeding:2: error: type mismatch;
 found   : Unit
 required: Int
if (isBirthday==false)
^